--- a/dispatcher/src/public/admin.html
+++ b/dispatcher/src/public/admin.html
@@ -1,138 +1,204 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Broker Admin Page</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 20px; }
-    h1 { color: #333; margin-bottom: 20px; }
-    table { border-collapse: collapse; width: 100%; margin-bottom: 30px; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
-    th { background-color: #f2f2f2; }
-    button { padding: 10px 16px; margin-bottom: 20px; cursor: pointer; }
-    button:hover { background: #eee; }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Broker Admin Page</title>
+<style>
+body { font-family: Arial, sans-serif; margin: 20px; }
+h1 { color: #333; margin-bottom: 20px; }
+table { border-collapse: collapse; width: 100%; margin-bottom: 30px; }
+th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
+th { background-color: #f2f2f2; }
+button { padding: 10px 16px; margin-bottom: 20px; cursor: pointer; }
+button:hover { background: #eee; }
+</style>
 </head>
 <body>
 
-  <h1>Broker Admin Page</h1>
+<h1>Broker Admin Page</h1>
 
-  <!-- DEVICES -->
-  <button onclick="loadDevices()">Load Devices</button>
-  <table id="devicesTable">
-    <thead>
-      <tr>
-        <th>ID</th><th>Type</th><th>IP</th><th>Port</th>
-        <th>Subnet</th><th>Public</th><th>Connection Code</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+<button onclick="loadDevices()">Load Devices</button>
+<table id="devicesTable">
+<thead>
+<tr>
+<th>ID</th><th>Type</th><th>IP</th><th>Port</th><th>Subnet</th><th>Public</th><th>Connection Code</th>
+</tr>
+</thead>
+<tbody></tbody>
+</table>
 
-  <!-- INTERFACES -->
-  <button onclick="loadInterfaces()">Load Interfaces</button>
-  <table id="interfacesTable">
-    <thead>
-      <tr>
-        <th>ID</th><th>Name</th><th>Email</th><th>Device Code</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+<button onclick="loadInterfaces()">Load Interfaces</button>
+<table id="interfacesTable">
+<thead>
+<tr>
+<th>ID</th><th>Name</th><th>Email</th><th>Device Code</th>
+</tr>
+</thead>
+<tbody></tbody>
+</table>
 
-  <!-- SESSIONS -->
-  <button onclick="loadSessions()">Load Sessions</button>
-  <table id="sessionsTable">
-    <thead>
-      <tr>
-        <th>Device ID</th><th>Full</th><th>Interface Email</th>
-      </tr>
-    </thead>
-    <tbody></tbody>
-  </table>
+<button onclick="loadSessions()">Load Sessions</button>
+<table id="sessionsTable">
+<thead>
+<tr>
+<th>device_id</th><th>socket_id</th><th>interface_id</th><th>created_at</th><th>updated_at</th>
+</tr>
+</thead>
+<tbody></tbody>
+</table>
 
+<button onclick="openVisualization()">Visualize</button>
+
+<script>
+const API_BASE = 'http://localhost:3000';
+
+async function loadDevices() {
+  try {
+    const devices = await fetch(`${API_BASE}/admin/devices`).then(r=>r.json());
+    const tbody = document.querySelector('#devicesTable tbody');
+    tbody.innerHTML = '';
+    devices.forEach(d=>{
+      const tr = document.createElement('tr');
+      tr.innerHTML = `<td>${d.device_id}</td><td>${d.type}</td><td>${d.ip}</td><td>${d.port}</td><td>${d.subnet}</td><td>${d.is_public}</td><td>${d.connection_code}</td>`;
+      tbody.appendChild(tr);
+    });
+  } catch(err){ console.error(err); alert('Failed to load devices.'); }
+}
+
+async function loadInterfaces() {
+  try {
+    const interfaces = await fetch(`${API_BASE}/admin/interfaces`).then(r=>r.json());
+    const tbody = document.querySelector('#interfacesTable tbody');
+    tbody.innerHTML = '';
+    interfaces.forEach(i=>{
+      const tr = document.createElement('tr');
+      tr.innerHTML = `<td>${i.interface_id}</td><td>${i.name}</td><td>${i.email}</td><td>${i.device_code}</td>`;
+      tbody.appendChild(tr);
+    });
+  } catch(err){ console.error(err); alert('Failed to load interfaces.'); }
+}
+
+async function loadSessions() {
+  try {
+    const sessions = await fetch(`${API_BASE}/admin/sessions`).then(r=>r.json());
+    const tbody = document.querySelector('#sessionsTable tbody');
+    tbody.innerHTML = '';
+    sessions.forEach(s=>{
+      const tr = document.createElement('tr');
+      tr.innerHTML = `<td>${s.device_id}</td><td>${s.socket_id}</td><td>${s.interface_id || ''}</td><td>${s.created_at}</td><td>${s.updated_at}</td>`;
+      tbody.appendChild(tr);
+    });
+  } catch(err){ console.error(err); alert('Failed to load sessions.'); }
+}
+
+function openVisualization(){
+  const popup = window.open("", "VisualizeSessions", "width=1000,height=900");
+  popup.document.write(`
+  <html>
+  <head>
+  <title>Session Visualization</title>
+  <style>
+  body { font-family: Arial, sans-serif; margin:20px; text-align:center; }
+  h2 { margin:15px 0; }
+  #server { margin:40px auto; padding:20px; background:#4caf50; color:white; font-weight:bold; border-radius:8px; width:150px; }
+  .section { margin-bottom:40px; }
+  .grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(200px,auto)); gap:20px; max-width:900px; margin:20px auto; justify-content:center; }
+  .card { border:1px solid #ccc; border-radius:8px; padding:15px; background:#f9f9f9; box-shadow:2px 2px 6px rgba(0,0,0,0.1); text-align:left; width:200px; transition:border 0.5s ease, background 0.3s ease; cursor:pointer; }
+  .card:hover { background:#e0f7fa; }
+  .card h3 { margin:0 0 10px 0; font-size:16px; color:#333; }
+  .card p { margin:4px 0; font-size:14px; }
+  </style>
+  </head>
+  <body>
+  <div class="section">
+  <h2>Interfaces</h2><div id="interfacesGrid" class="grid"></div>
+  <h2>Connected Interfaces</h2><div id="connectedInterfacesGrid" class="grid"></div>
+  </div>
+  <div id="server">SERVER</div>
+  <div class="section">
+  <h2>Connected Devices</h2><div id="connectedDevicesGrid" class="grid"></div>
+  <h2>Devices</h2><div id="devicesGrid" class="grid"></div>
+  </div>
   <script>
-    // ⚠️ Adjust this if your backend routes are different (e.g. /api/admin)
-    const API_BASE = 'http://localhost:3000/admin';
+  const API_BASE = "${API_BASE}";
+  let allInterfaces=[], allDevices=[], matchedCodes={};
 
-    async function loadDevices() {
-      try {
-        const res = await fetch(`${API_BASE}/devices`);
-        if (!res.ok) throw new Error(`HTTP ${res.status}`);
-        const devices = await res.json();
+  function getRandomColor(){const letters='0123456789ABCDEF';let color='#';for(let i=0;i<6;i++) color+=letters[Math.floor(Math.random()*16)]; return color;}
 
-        const tbody = document.querySelector('#devicesTable tbody');
-        tbody.innerHTML = '';
+  async function toggleInterfaceConnection(i){
+    try{
+      const device = allDevices.find(d=>d.connection_code===i.device_code);
+      if(!device) return alert('No matching device.');
+      const session = await fetch(API_BASE+'/admin/session/'+device.device_id).then(r=>r.json());
+      if(session.interface_id){
+        await fetch(API_BASE+'/device_disconnect_from_dispatcher',{method:'POST', headers:{'Content-Type':'application/json'}, body:JSON.stringify({deviceId:device.device_id})});
+      } else {
+        await fetch(API_BASE+'/register_full_session',{method:'POST', headers:{'Content-Type':'application/json'}, body:JSON.stringify({deviceId:device.device_id, interfaceId:i.interface_id})});
+      }
+    }catch(e){ console.error(e);}
+  }
 
-        devices.forEach(d => {
-          const tr = document.createElement('tr');
-          tr.innerHTML = `
-            <td>${d.device_id}</td>
-            <td>${d.type}</td>
-            <td>${d.ip}</td>
-            <td>${d.port}</td>
-            <td>${d.subnet}</td>
-            <td>${d.public}</td>
-            <td>${d.connection_code}</td>
-          `;
-          tbody.appendChild(tr);
-        });
-      } catch (err) {
-        console.error("Error loading devices:", err);
-        alert("Failed to load devices. Check console.");
+  async function toggleDeviceConnection(d){
+    try{
+      const session = await fetch(API_BASE+'/admin/session/'+d.device_id).then(r=>r.json());
+      if(session.interface_id){
+        await fetch(API_BASE+'/device_disconnect_from_dispatcher',{method:'POST', headers:{'Content-Type':'application/json'}, body:JSON.stringify({deviceId:d.device_id})});
+      }
+    }catch(e){ console.error(e);}
+  }
+
+  function renderGrids(sessions){
+    const connectedInterfaceIds = sessions.filter(s=>s.interface_id).map(s=>s.interface_id);
+    const connectedDeviceIds = sessions.map(s=>s.device_id);
+    const interfacesGrid = document.querySelector('#interfacesGrid');
+    const connectedInterfacesGrid = document.querySelector('#connectedInterfacesGrid');
+    const devicesGrid = document.querySelector('#devicesGrid');
+    const connectedDevicesGrid = document.querySelector('#connectedDevicesGrid');
+    interfacesGrid.innerHTML=''; connectedInterfacesGrid.innerHTML=''; devicesGrid.innerHTML=''; connectedDevicesGrid.innerHTML='';
+    const connectedInterfaceCards={}, connectedDeviceCards={};
+
+    allInterfaces.forEach(i=>{
+      const card = document.createElement('div'); card.className='card';
+      card.innerHTML='<h3>'+i.name+'</h3><p><b>Email:</b>'+i.email+'</p><p><b>Device Code:</b>'+i.device_code+'</p>';
+      card.addEventListener('click',()=>toggleInterfaceConnection(i));
+      if(connectedInterfaceIds.includes(i.interface_id)){ connectedInterfacesGrid.appendChild(card); connectedInterfaceCards[i.device_code]=card; } 
+      else interfacesGrid.appendChild(card);
+    });
+
+    allDevices.forEach(d=>{
+      const card=document.createElement('div'); card.className='card';
+      card.innerHTML='<h3>Connection Code: '+d.connection_code+'</h3><p><b>Type:</b>'+d.type+'</p><p><b>IP:</b>'+d.ip+'</p><p><b>Port:</b>'+d.port+'</p><p><b>Subnet:</b>'+d.subnet+'</p>';
+      card.addEventListener('click',()=>toggleDeviceConnection(d));
+      if(connectedDeviceIds.includes(d.device_id)){ connectedDevicesGrid.appendChild(card); connectedDeviceCards[d.connection_code]=card; }
+      else devicesGrid.appendChild(card);
+    });
+
+    for(const code in connectedInterfaceCards){
+      if(connectedDeviceCards[code]){
+        if(!matchedCodes[code]) matchedCodes[code]=getRandomColor();
+        const color=matchedCodes[code];
+        connectedInterfaceCards[code].style.border='3px solid '+color;
+        connectedDeviceCards[code].style.border='3px solid '+color;
       }
     }
+  }
 
-    async function loadInterfaces() {
-      try {
-        const res = await fetch(`${API_BASE}/interfaces`);
-        if (!res.ok) throw new Error(`HTTP ${res.status}`);
-        const interfaces = await res.json();
+  async function updateData(){
+    allInterfaces = await fetch(API_BASE+'/admin/interfaces').then(r=>r.json());
+    allDevices = await fetch(API_BASE+'/admin/devices').then(r=>r.json());
+    const sessions = await fetch(API_BASE+'/admin/sessions').then(r=>r.json());
+    renderGrids(sessions);
+  }
 
-        const tbody = document.querySelector('#interfacesTable tbody');
-        tbody.innerHTML = '';
-
-        interfaces.forEach(i => {
-          const tr = document.createElement('tr');
-          tr.innerHTML = `
-            <td>${i.interface_id}</td>
-            <td>${i.name}</td>
-            <td>${i.email}</td>
-            <td>${i.device_code}</td>
-          `;
-          tbody.appendChild(tr);
-        });
-      } catch (err) {
-        console.error("Error loading interfaces:", err);
-        alert("Failed to load interfaces. Check console.");
-      }
-    }
-
-    async function loadSessions() {
-      try {
-        const res = await fetch(`${API_BASE}/sessions`);
-        if (!res.ok) throw new Error(`HTTP ${res.status}`);
-        const sessions = await res.json();
-
-        const tbody = document.querySelector('#sessionsTable tbody');
-        tbody.innerHTML = '';
-
-        sessions.forEach(s => {
-          const tr = document.createElement('tr');
-          tr.innerHTML = `
-            <td>${s.deviceId}</td>
-            <td>${s.full}</td>
-            <td>${s.interfaceEmail || ''}</td>
-          `;
-          tbody.appendChild(tr);
-        });
-      } catch (err) {
-        console.error("Error loading sessions:", err);
-        alert("Failed to load sessions. Check console.");
-      }
-    }
-  </script>
+  updateData();
+  setInterval(updateData,1000);
+  <\/script>
+  </body>
+  </html>
+  `);
+}
+</script>
 
 </body>
 </html>
